--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,39 @@
  */
 
  @import "materialize";
+
+ body {
+  font-size: 100%;
+ }
+
+nav ul li a{
+  color: black;
+}
+
+
+
+
+
+.slider.fullscreen {
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+@font-face {
+    font-family: 'loremipsum';
+    src: url(font-path('loremipsum.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('loremipsum.woff')) format('woff'),
+         url(font-path('loremipsum.ttf'))  format('truetype'),
+         url(font-path('loremipsum.svg') + "#loremipsum") format('svg');
+}
+
+.navlinkfont {
+  font-family: loremipsum, sans-serif;
+  font-size: 130%;
+}
