--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>Photosonrails</title>
     <%= csrf_meta_tags %>
+<%= javascript_include_tag "application", "data-turbolinks-track" => true  %>
+ <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+<div class="navbar-fixed" style="color: white; background-color: white; opacity: 0.6">
+  <nav style="color: white; background-color: white">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo black-text"><font style="font-family: loremipsum; font-size: 80%">&nbsp;george fawcett <font style="color: #bbbbbb">photography</font></font></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down navlinks">
+        <li><a href="sass.html"><font class="navlinkfont">series &#9662</font></a></li>
+        <li><a href="badges.html"><font class="navlinkfont">contact</font></a></li>
+        <li><a href="collapsible.html"><font class="navlinkfont">instagram</font></a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
     <%= yield %>
   </body>
 </html>
