--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,27 @@
   </head>
 
   <body>
+<ul id="dropdown1" class="dropdown-content">
+<li><a href="#!">street photography</a></li>
+  <li><a href="#!">toronto</a></li>
+  <li><a href="#!">new york</a></li>
+  <li><a href="#!">chicago</a></li>
+  <li><a href="#!">colorado</a></li>
+  <li><a href="#!">utah</a></li>
+  <li><a href="#!">california</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">hjdhfjdh</a></li>
+</ul>
 
 <div class="navbar-fixed" style="color: white; background-color: white; opacity: 0.6">
   <nav style="color: white; background-color: white">
     <div class="nav-wrapper">
+
       <a href="#" class="brand-logo black-text"><font style="font-family: loremipsum; font-size: 80%">&nbsp;george fawcett <font style="color: #bbbbbb">photography</font></font></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down navlinks">
-        <li><a href="sass.html"><font class="navlinkfont">series &#9662</font></a></li>
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><font class="navlinkfont">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;series &#9662</font></a></li>
         <li><a href="badges.html"><font class="navlinkfont">contact</font></a></li>
-        <li><a href="collapsible.html"><font class="navlinkfont">instagram</font></a></li>
+        <li><a href="collapsible.html"><font class="navlinkfont">instagram&nbsp;<font style="color: #8a3ab9"><i class="fa fa-instagram" aria-hidden="true"></i></font></font></a></li>
       </ul>
     </div>
   </nav>
